[package]
name = "kserd"
version = "0.1.0"
authors = ["kurt <kurtlawrence92@gmail.com>"]
edition = "2018"

[dependencies]
base91 =    { version = "0.0.1",    optional = true,	default-features = false }
nom =	    { version = "5.0",	    optional = true,	default-features = false,   features = [ "std", "lexical" ] }
serde =	    { version = "1.0",	    optional = true, 	default-features = false,   features = [ "std" ] }

[features]
default =   [ "encode", "format", "parse", ]
encode =    [ "serde" ]
format =    [ "base91" ]
parse =     [ "base91", "nom" ]

[dev-dependencies]
serde_derive = "1"
