[package]
name = "kserd"
version = "0.1.0"
authors = ["kurt <kurtlawrence92@gmail.com>"]
edition = "2018"
description = "Kurt's Self-Explanatory Rust Data"
documentation = "https://docs.rs/kserd/"
homepage = "https://github.com/kurtlawrence/kserd"
repository = "https://github.com/kurtlawrence/kserd"
readme = "README.md"
categories = [ "data-structures", "encoding", "parsing" ]
license = "MIT"

[dependencies]
base91 =    { version = "0.0.1",    optional = true,	default-features = false }
nom =	    { version = "5.0",	    optional = true,	default-features = false,   features = [ "std", "lexical" ] }
serde =	    { version = "1.0",	    optional = true, 	default-features = false,   features = [ "std" ] }

[features]
default =   [ "encode", "format", "parse", ]
encode =    [ "serde" ]
format =    [ "base91" ]
parse =     [ "base91", "nom" ]

[dev-dependencies]
serde_derive = "1"
rand = "0.7"
