[package]
name = "kserd"
version = "0.4.2"
authors = ["kurt <kurtlawrence92@gmail.com>"]
edition = "2018"
description = "Kurt's Self-Explanatory Rust Data"
documentation = "https://docs.rs/kserd/"
homepage = "https://github.com/kurtlawrence/kserd"
repository = "https://github.com/kurtlawrence/kserd"
readme = "README.md"
categories = [ "data-structures", "encoding", "parsing" ]
license = "MIT"

[dependencies]
base91 =       { version = "0.0.1", optional = true,	default-features = false }
fast-float =   "0.2"
lexical-core = { version = "0.7",   optional = false,	default-features = false,   features = [ "std", "format" ] }
nom =	       { version = "5",	    optional = true,	default-features = false,   features = [ "std" ] }
serde =	       { version = "1",	    optional = true, 	default-features = false,   features = [ "std" ] }

[features]
default =   [ "encode", "format", "parse", ]
encode =    [ "serde" ]
format =    [ "base91" ]
parse =     [ "base91", "nom" ]

[dev-dependencies]
serde_derive = "*"
rand = "*"
criterion = "*"

[[bench]]
name = "num"
harness = false
